finish readme, loaad wireframes, fix footer overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -267,6 +267,7 @@ h1 {
   color: #f0f9ff;
   background-color: #282d32;
   box-shadow: 0px 0px 10px black;
+  margin-top: 200px;
 }
 
 .footer-dark h3 {
@@ -363,7 +364,7 @@ h1 {
   background: url(../images/overlay.png);
   position: absolute;
   width: 100%;
-  height: 105%;
+  height: 135%;
   z-index: 100;
   background-repeat: repeat;
 }
